setFilter. Last.